# dense_linear_algebra

./: CMakeLists.txt  LICENSE  README.md
bgemm/cublas_bgemm/: CMakeLists.txt  README.md
bgemm/cublas_bgemm/src/: cublas_bgemm.cpp
cmake/: common.cmake  detect_fortran_compiler.cmake
cmake/Modules/: FindCommon.cmake  FindISPC.cmake  FindIntelCompilers.cmake  FindLibMesh.cmake  FindMKL.cmake  FindclBLAS.cmake  FindclMAGMA.cmake
cmake/Modules/Languages/: CMakeDetermineICPCCompiler.cmake  CMakeDetermineIFORTCompiler.cmake  CMakeICPCCompiler.cmake.in  CMakeICPCInformation.cmake  CMakeIFORTCompiler.cmake.in  CMakeIFORTInformation.cmake  CMakeTestICPCCompiler.cmake  CMakeTestIFORTCompiler.cmake
common/: helper.h
gemm/clblas/: CMakeLists.txt
gemm/clblas/src/: sgemm_clblas.c
gemm/cublas/: CMakeLists.txt  README.md
gemm/cublas/src/: sgemm_cublas.cpp
gemm/cuda/: CMakeLists.txt  README.md
gemm/cuda/src/: sgemm_cuda_kernel.cu  sgemm_cuda_matrixmul.cu
gemm/gemm_openmp/: CMakeLists.txt  README.md
gemm/gemm_openmp/src/: gemm_openmp.cpp
gemm/gemm_openmp_fortran/: CMakeLists.txt  README.md
gemm/gemm_openmp_fortran/src/: gemm.f90
gemm/gemm_openmp_mkl/: .clang-format  main.cpp
gemm/gemm_openmp_mkl/benchmarks/: chart.xlsx
gemm/gemm_threads/: CMakeLists.txt  README.md
gemm/gemm_threads/src/: gemm.cpp
gemm/mklblas/: CMakeLists.txt  README.md  main.cpp
gemm/mklblas/benchmarks/: chart.xlsx
gemm/mpi/: CMakeLists.txt  README.md
hpl/: Make.intel64
hpl/src/pfact/intel64/: Make.inc
kmeans/: README.md
kmeans/kmeans_cuda/: CMakeLists.txt
kmeans/kmeans_cuda/src/: cluster.c  kmeans.c  kmeans_clustering.c  kmeans_cuda.cu  kmeans_cuda_kernel.cu  rmse.c
kmeans/kmeans_openmp/: CMakeLists.txt
kmeans/kmeans_openmp/src/: cluster.c  getopt.h  kmeans.cpp  kmeans_clustering.c
kmeans/kmeans_rodinia_opencl/: CMakeLists.txt
kmeans/kmeans_rodinia_opencl/src/: cluster.c  kmeans.cl  kmeans.cpp  kmeans_clustering.c  read_input.c  rmse.c
lud/: README.md
lud/clmagma/: CMakeLists.txt
lud/clmagma/src/: lud_clmagma.cpp
lud/cublas/: CMakeLists.txt
lud/cublas/src/: lud_cublas.cpp
lud/cublas_mkl/: CMakeLists.txt
lud/cublas_mkl/src/: lud_cublas_mkl.cpp
lud/cusolver/: CMakeLists.txt
lud/cusolver/src/: lud_cusolver.cpp
lud/cusolver_mkl/: CMakeLists.txt
lud/cusolver_mkl/src/: lud_cusolver_mkl.cpp
lud/lud_openmp/: CMakeLists.txt  README.md
lud/lud_openmp/src/: lud_openmp.cpp
lud/lud_openmp_fortran/: CMakeLists.txt  README.md
lud/lud_openmp_fortran/src/: lud.f90
lud/mkl/: CMakeLists.txt
lud/mkl/src/: lud_mkl.cpp
pddp2means/: CMakeLists.txt  README  README.md
pddp2means/src/: Makefile  pddp_2means.c  pddp_2means.h
